# Code-Orchestrator-Service

./: .coverage  .env  .gitignore  Dockerfile  README.md  WBS_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
config/: .gitkeep  alias_lookup.json  discovered_concepts.json  noise_terms.yaml  technical_stopwords.json
data/: cleaned_unmatched_terms.json  concepts_for_llm_audit.csv  high_freq_for_validation.json  index_extraction.jsonl  index_terms_validated.json  new_index_terms_to_backfill.json  taxonomy_llm_validation.json  taxonomy_terms_to_validate.json  terms_for_llm_validation.json  text_pairs.jsonl  unmatched_index_terms.json  validated_term_filter.json
data/baseline_comparisons/: aposd_baseline_comparison.json  tuning_experiment_results.json
docs/: ARCHITECTURE.md  HYBRID_TIERED_CLASSIFIER_ARCHITECTURE.md  HYBRID_TIERED_CLASSIFIER_WBS.md  TECHNICAL_CHANGE_LOG.md
docs/architecture/: MULTI_STAGE_ENRICHMENT_PIPELINE_ARCHITECTURE.md
models/: concept_classifier.joblib  concept_classifier.json
scripts/: add_index_terms_and_backfill.py  backfill_apostrophe_terms.py  backfill_concepts.py  backfill_fixed_terms.py  backfill_noise_terms.py  backfill_validated_concepts.py  build_alias_lookup.py  extract_concepts_for_audit.py  extract_index_terms.py  find_missing_term_pages.py  finetune_bge.py  finetune_unixcoder.py  generate_concept_labels.py  generate_training_pairs.py  prepare_concepts_for_llm_audit.py  train_classifier.py  validate_taxonomy_with_llms.py  verify_all_keep_terms.py  verify_keep_terms.py
src/: __init__.py  main.py
src/agents/: __init__.py  codebert_agent.py  codet5_agent.py  graphcodebert_agent.py  protocols.py  registry.py
src/api/: __init__.py  classify.py  codebert.py  codet5.py  concepts.py  embed.py  extract.py  graphcodebert.py  health.py  keywords.py  metadata.py  search.py  similarity.py  topics.py
src/classifiers/: __init__.py  alias_lookup.py  exceptions.py  heuristic_filter.py  llm_fallback.py  orchestrator.py  trained_classifier.py
src/clients/: __init__.py  inference_client.py  semantic_search.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  tracing.py
src/curation/: __init__.py  classifier.py  curator.py  models.py
tests/: __init__.py  test_concept_validator.py
(+112 files in other folders)
